test/corpus/toplevel.test
=====
Nextflow Pipeline
=====
nextflow_pipeline {

}
---

(source_file
  (suite
    (suite_block)))

====
Nextflow workflow
====
nextflow_workflow {

}
---

(source_file
  (suite
    (suite_block)))

===
Nextflow process
===
nextflow_process {

}
---

(source_file
  (suite
    (suite_block)))

===
Nextflow function
===
nextflow_function {

}
---

(source_file
  (suite
    (suite_block)))

===
Import
===
import static groovy.io.FileType as FileType
nextflow_workflow {

}
---

(source_file
  (import
    (identifier)
    (identifier)
    (identifier)
    (identifier))
  (suite
    (suite_block)))
